# ngine

./: .directory  CMakeLists.txt  LICENSE  README  README.md  SConstruct  app.js  architecture.txt  cppcheck.txt  futuredevs  main.c  main.cpp  ngine.kdev4  ngine_old.kdev4  ngine_ungit.kdev4  nuttyengine.kdev4  push.sh  readme
examples/: CMakeLists.txt
examples/serialize/: main.c  simpl.h
examples/serialize/dyn_string/: main.c  sfuncs.h
examples/serialize/linked_list/: main.c  sfuncs.h  tool.h
examples/serialize/nasted_ptr_struct/: main.c  sfuncs.h  structs.h
import/blender/: CMakeLists.txt  Makefile
import/blender/guardedalloc/: .directory  MEM_guardedalloc.h
source/: .directory  CMakeLists.txt  alloc.h  array.c  array.h  assets_mgr.c  assets_mgr.h  audio.c  audio.h  camera.c  camera.h  dynlib.c  dynlib.h  dynstr.h  engine.c  engine.cpp  engine.h  entity.c  entity.h  func_bind.c  iofile.c  iofile.h  light.c  light.h  list.c  log.c  log.h  material.c  material.h  math.c  math.h  mempool.h  mesh.c  mesh.h  mesh_prims.c  mesh_prims.h  ngine.c  ngine.h  node.c  node.h  (+40 more)
source/anim/: bone.c  bone.h
source/cinterp/: cinterp.c  cinterp.cpp  cinterp.h  cscript.h
source/cmdinterp/: cmdinterp.c  cmdinterp.h
source/cntr/: array.h  list.h  tree.c  tree.h
source/core/: array.c  list.c  mempool.h  serialize.c  struct_mod.h  timer.c
source/gui/: bltile.c  bltile.h  button.c  button.h  graph.h  text.c  text.h  text_edit.c  text_edit.h  text_format.txt  ui_concept.txt  widget.c  widget.h  window.c  window.h
source/import/: .directory  CMakeLists.txt
source/import/asmp/: asmp.c  asmp.h
source/import/blender/: .directory  CMakeCache.txt  bCommon.h  bMain.h  blen_mesh.c  blen_mesh.h  blen_sc_obj.c  blen_sc_obj.h  blen_scene.c  blen_scene.h  cmake_install.cmake  main.c
source/import/collada/: convert_collada.c  gram  ngine_main.c
source/import/targa/: tga.c  tga.h
source/iohand/: .directory  CMakeLists.txt  display.c  display.h  input.c  input.h  iohand.c  iohand.h  window.c  window.h
source/math/: .directory  matrix.c  matrix.h  vector.c  vector.h
source/math/SIMDx86/: SIMDx86.h  SIMDx86Polygon.inc  SIMDx86_altivec.h  SIMDx86asm.inc  SIMDx86asm_x64.inc  align.h  codemod.h  consts.h  image.h  matrix.h  quaternion.h
source/math/image/: image.c
source/math/main/: aligned_malloc.c  emms.asm  getisa_ppc.c  getisa_x86.asm  nullemms.c  overlay.c  overlay_ppc.c  overlay_x86.c  version.c
source/math/math/: math_387.asm  math_buffer.asm  math_sse.asm  math_sse2.asm
source/math/matrix/: matrix_altivec.c  matrix_buffer.asm
source/math/plane/: plane.c  plane_sse.asm  (+1 more)
source/mesh/: CMakeLists.txt  mesh.c  mesh.h  mesh_prims.c
source/network/: client.c  client.h  rconsole.c  rconsole.h  server.c  server.h  socket.c  socket.h
source/nodes/: nodes.txt
source/physics/: .directory  CMakeLists.txt  phys_rigidbody_mod.c  phys_rigidbody_mod.h  sc_node_phys.c  sc_node_phys.h  scene_phys.c  scene_phys.h
source/python/: .python_console.cpp.kate-swp  .python_console.h.kate-swp  python_console.c  python_console.cpp  python_console.h
source/render/: .directory  CMakeLists.txt  framebuffer.c  framebuffer.h  gl_render_sys.c  gl_render_sys.h  hw_buffers.h  opengl1.c  opengl1.h  pass.c  pass.h  render.c  render.h  render_state.c  render_state.h  render_target.c  render_target.h  shader_prog.h  technique.c  technique.h  unigine_render_pipeline.txt
source/scenegraph/: camera.c  camera.h  entity.c  entity.h  ray.c  ray.h  sc_node.c  sc_node.h  scene.c  scene.h  texture.c  texture.h  trigger.c  trigger.h
source/serialize/: slist.h  smesh.h  sstring.h
(+260 files in other folders)
